--- a/app/src/main/res/drawable/minus_cirlce_block.xml
+++ b/app/src/main/res/drawable/minus_cirlce_block.xml
@@ -8,13 +8,13 @@
       android:pathData="M8.94,16.5C13.065,16.5 16.44,13.125 16.44,9C16.44,4.875 13.065,1.5 8.94,1.5C4.815,1.5 1.44,4.875 1.44,9C1.44,13.125 4.815,16.5 8.94,16.5Z"
       android:strokeLineJoin="round"
       android:fillColor="#00000000"
-      android:strokeColor="#111827"
+      android:strokeColor="@color/_111827"
       android:strokeLineCap="round"/>
   <path
       android:strokeWidth="1"
       android:pathData="M5.94,9H11.94"
       android:strokeLineJoin="round"
       android:fillColor="#00000000"
-      android:strokeColor="#111827"
+      android:strokeColor="@color/_111827"
       android:strokeLineCap="round"/>
 </vector>
