--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -55,7 +55,7 @@
                 android:paddingVertical="@dimen/_7sdp"
                 android:text="@string/continue_"
                 android:textAllCaps="false"
-                android:textColor="@color/white"
+                android:textColor="@color/white_og"
                 android:textSize="@dimen/_10sdp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
