--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,19 +2,19 @@
 <resources>
     <color name="purple_200">#397283</color>
     <color name="purple_500">#397283</color>
-    <color name="purple_700">#F4F8FB</color>
+    <color name="purple_700">#000000</color>
     <color name="teal_200">#397283</color>
     <color name="teal_700">#397283</color>
-    <color name="background">#F4F8FB</color>
-    <color name="black">#000000</color>
+    <color name="background">#000000</color>
+    <color name="black">#FFFFFF</color>
     <color name="black_light">#616977</color>
-    <color name="black_light_keypad">#616977</color>
+    <color name="black_light_keypad">#878787</color>
     <color name="black_light_new">#6B6C6D</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#000000</color>
     <color name="gray">#AFB1B7</color>
-    <color name="gray1">#6B6C6D</color>
+    <color name="gray1">#919191</color>
     <color name="purple">#397283</color>
-    <color name="purple_keypad">#397283</color>
+    <color name="purple_keypad">#FFFFFF</color>
     <color name="purple_light">#EFE3FF</color>
     <color name="stock">#DEDEDE</color>
     <color name="btn_bg">#F4F8FB</color>
@@ -34,34 +34,34 @@
     <color name="colorHover">#30000000</color>
 
     <color name="white_og">#FFFFFF</color>
-    <color name="white_language">#FFFFFF</color>
-    <color name="border_language">#D8DDEA</color>
+    <color name="white_language">#272727</color>
+    <color name="border_language">#272727</color>
     <color name="black_og">#000000</color>
     <color name="rd_un_check_dot">#4E5161</color>
     <color name="red_new">#FF3B00</color>
     <color name="red_light">#FFEBEB</color>
     <color name="pink_light">#EFE3FF</color>
     <color name="button_color">#397283</color>
-    <color name="line">#E4E4E5</color>
+    <color name="line">#4E4E4E</color>
     <color name="border">#D8DDEA</color>
     <color name="border_new">#E5E7EB</color>
     <color name="onboarding_bottom_bg">#F4F8FB</color>
     <color name="onboarding_overlay_bottom_bg">#F4F8FB</color>
     <color name="bg_color">#F4F8FB</color>
-    <color name="bg_color_call_log">#F4F8FB</color>
-    <color name="e0e0e0">#E0E0E0</color>
-    <color name="setting_text_color">#111827</color>
+    <color name="bg_color_call_log">#1F1F1F</color>
+    <color name="e0e0e0">#4E4E4E</color>
+    <color name="setting_text_color">#FFFFFF</color>
     <color name="setting_title_color">#6B6C6D</color>
-    <color name="setting_header_title_color">#6B6C6D</color>
-    <color name="setting_text_light">#6B6C6D</color>
-    <color name="_939393">#939393</color>
-    <color name="_292d32">#292D32</color>
-    <color name="_6b6c6d">#6B6C6D</color>
+    <color name="setting_header_title_color">#FFFFFF</color>
+    <color name="setting_text_light">#878787</color>
+    <color name="_939393">#585858</color>
+    <color name="_292d32">#FFFFFF</color>
+    <color name="_6b6c6d">#878787</color>
 
     <color name="contact_scroll_index_color">#0059FF</color>
     <color name="orange">#FF3F3F</color>
     <color name="intro_sub_text_color">#4D4D4D</color>
-    <color name="intro_sub_text_color_keypad">#4D4D4D</color>
+    <color name="intro_sub_text_color_keypad">#878787</color>
     <color name="grey_light">#EEEEF0</color>
     <color name="search_hint">#848691</color>
     <color name="grey_sms_line">#D8DDEA</color>
@@ -75,17 +75,15 @@
     <color name="_397283">#397283</color>
     <color name="_0c1319">#0C1319</color>
     <color name="e6e6e6">#E6E6E6</color>
-    <color name="e6e6e6_keypad">#E6E6E6</color>
+    <color name="e6e6e6_keypad">#1F1F1F</color>
     <color name="_06b7280">#6B7280</color>
 
     <color name="ripple_foreground">#33FFFFFF</color>
     <color name="my_grey">#E6E6E6</color>
     <color name="white_10">#1AFFFFFF</color>
     <color name="f5f5f5">#F5F5F5</color>
-    <color name="f5f5f5_keypad">#F5F5F5</color>
-    <color name="_111827">#111827</color>
-    <color name="white_dialog">#FFFFFF</color>
-    <color name="white_search">#FFFFFF</color>
-
-
+    <color name="f5f5f5_keypad">#1F1F1F</color>
+    <color name="_111827">#FFFFFF</color>
+    <color name="white_dialog">#272727</color>
+    <color name="white_search">#565656</color>
 </resources>
