--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,129 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.CallerID" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CallerID" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Base.Theme.CallerID_Splash" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorAccent">@color/purple_500</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryDark">@color/white</item>
+        <item name="android:includeFontPadding">false</item>
+        <!--<item name="android:windowBackground">@drawable/splash</item>-->
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowDisablePreview">true</item>
+
+    </style>
+
+    <!--pop up menu-->
+    <style name="myCustomMenuTextAppearance" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/_11ssp</item>
+        <item name="fontFamily">@font/sora_light</item>
+    </style>
+
+    <style name="PopupMenu" parent="ThemeOverlay.AppCompat">
+
+        <item name="android:backgroundTint">@color/popup_bg_color</item>
+        <item name="android:popupElevation">5dp</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:dropDownHorizontalOffset">0dp</item>
+        <item name="android:dropDownVerticalOffset">0dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:itemTextAppearance">@style/myCustomMenuTextAppearance</item>
+        <item name="android:lines">@integer/material_motion_duration_long_1</item>
+        <item name="android:dropDownListViewStyle">@style/PopupMenuListView</item>
+
+    </style>
+
+    <style name="PopupMenuListView" parent="@style/Widget.AppCompat.ListView.DropDown">
+        <item name="android:divider">@drawable/divider_pop</item>
+        <item name="android:dividerHeight">0.1dp</item>
+        <item name="android:layout_gravity">left</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:marqueeRepeatLimit">marquee_forever</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+
+    </style>
+
+
+    <style name="PopupMenuIcon" parent="ThemeOverlay.AppCompat">
+
+        <item name="android:backgroundTint">@color/popup_bg_color</item>
+        <item name="android:popupElevation">5dp</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:dropDownHorizontalOffset">0dp</item>
+        <item name="android:dropDownVerticalOffset">0dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:itemTextAppearance">@style/myCustomMenuTextAppearance</item>
+        <item name="android:lines">@integer/material_motion_duration_long_1</item>
+        <item name="android:dropDownListViewStyle">@style/PopupMenuListViewIcon</item>
+
+
+    </style>
+
+    <style name="PopupMenuListViewIcon" parent="@style/Widget.AppCompat.ListView.DropDown">
+
+        <item name="android:divider">@drawable/divider_pop_icon</item>
+        <item name="android:dividerHeight">0.1dp</item>
+        <item name="android:layout_gravity">left</item>
+        <item name="android:paddingStart">@dimen/_5sdp</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:marqueeRepeatLimit">marquee_forever</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+    </style>
+
+    <style name="MyDialogTheme" parent="Theme.AppCompat.DayNight.Dialog">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <style name="CircleIndicatorStyle">
+        <item name="ci_width">8dp</item>
+        <item name="ci_height">8dp</item>
+        <item name="ci_margin">6dp</item>
+        <item name="ci_drawable">@drawable/indicator_selected</item>
+        <item name="ci_drawable_unselected">@drawable/indicator_unselected</item>
+    </style>
+
+    <style name="Theme.MyApp.Fullscreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="PopupMenuNew" parent="ThemeOverlay.AppCompat.Light">
+        <item name="popupMenuStyle">@style/CustomPopupMenu</item>
+    </style>
+
+    <style name="CustomPopupMenu" parent="@style/Widget.AppCompat.PopupMenu">
+        <item name="android:popupBackground">@drawable/bg_popup_rounded</item>
+    </style>
+
+
 </resources>
