--- a/app/src/main/res/drawable/bg_popup_rounded.xml
+++ b/app/src/main/res/drawable/bg_popup_rounded.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/white_dialog" />
     <corners android:radius="12dp" />
     <padding
         android:bottom="8dp"
