--- a/app/src/main/res/drawable/ic_add_new_user.xml
+++ b/app/src/main/res/drawable/ic_add_new_user.xml
@@ -11,35 +11,35 @@
         android:strokeLineJoin="round"
         android:strokeWidth="1.2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/black"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M3,21V19C3,17.939 3.421,16.922 4.172,16.172C4.922,15.421 5.939,15 7,15H11C11.96,15 12.84,15.338 13.53,15.901"
         android:strokeLineJoin="round"
         android:strokeWidth="1.2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/black"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M16,3.13C16.86,3.35 17.623,3.851 18.168,4.552C18.712,5.254 19.008,6.117 19.008,7.005C19.008,7.893 18.712,8.756 18.168,9.458C17.623,10.159 16.86,10.66 16,10.88"
         android:strokeLineJoin="round"
         android:strokeWidth="1.2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/black"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M16,19H22"
         android:strokeLineJoin="round"
         android:strokeWidth="1.2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/black"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M19,16V22"
         android:strokeLineJoin="round"
         android:strokeWidth="1.2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/black"
         android:strokeLineCap="round"/>
   </group>
 </vector>
