--- a/app/src/main/res/drawable/ic_back_btn.xml
+++ b/app/src/main/res/drawable/ic_back_btn.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/black"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M22.209,13H3.976"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="@color/black"
       android:strokeLineCap="round"/>
 </vector>
