--- a/app/src/main/res/drawable/ic_contacts_selected.xml
+++ b/app/src/main/res/drawable/ic_contacts_selected.xml
@@ -7,8 +7,8 @@
       android:strokeWidth="1"
       android:pathData="M5.817,4.333H20.984C20.984,4.333 23.15,4.333 23.15,6.5V21.667C23.15,21.667 23.15,23.833 20.984,23.833H5.817C5.817,23.833 3.65,23.833 3.65,21.667V6.5C3.65,6.5 3.65,4.333 5.817,4.333Z"
       android:strokeLineJoin="round"
-      android:fillColor="#397283"
-      android:strokeColor="#397283"
+      android:fillColor="@color/purple_keypad"
+      android:strokeColor="@color/purple_keypad"
       android:strokeLineCap="round"/>
   <path
       android:strokeWidth="1"
@@ -29,13 +29,13 @@
       android:pathData="M9.067,2.167V4.333"
       android:strokeLineJoin="round"
       android:fillColor="#00000000"
-      android:strokeColor="#397283"
+      android:strokeColor="@color/purple_keypad"
       android:strokeLineCap="round"/>
   <path
       android:strokeWidth="1"
       android:pathData="M17.734,2.167V4.333"
       android:strokeLineJoin="round"
       android:fillColor="#00000000"
-      android:strokeColor="#397283"
+      android:strokeColor="@color/purple_keypad"
       android:strokeLineCap="round"/>
 </vector>
