--- a/app/src/main/res/drawable/ic_search_new.xml
+++ b/app/src/main/res/drawable/ic_search_new.xml
@@ -11,14 +11,14 @@
         android:strokeLineJoin="round"
         android:strokeWidth="2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/black"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M22.75,22.75L16.25,16.25"
         android:strokeLineJoin="round"
         android:strokeWidth="2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/black"
         android:strokeLineCap="round"/>
   </group>
 </vector>
