--- a/app/src/main/res/drawable/notification.xml
+++ b/app/src/main/res/drawable/notification.xml
@@ -7,18 +7,18 @@
       android:strokeWidth="1"
       android:pathData="M9.015,2.183C6.532,2.183 4.515,4.2 4.515,6.683V8.85C4.515,9.308 4.32,10.005 4.087,10.395L3.225,11.828C2.692,12.713 3.06,13.695 4.035,14.025C7.267,15.105 10.755,15.105 13.987,14.025C14.895,13.725 15.292,12.653 14.797,11.828L13.935,10.395C13.71,10.005 13.515,9.308 13.515,8.85V6.683C13.515,4.208 11.49,2.183 9.015,2.183Z"
       android:fillColor="#00000000"
-      android:strokeColor="#111827"
+      android:strokeColor="@color/_111827"
       android:strokeLineCap="round"/>
   <path
       android:strokeWidth="1"
       android:pathData="M10.402,2.4C10.17,2.333 9.93,2.28 9.682,2.25C8.962,2.16 8.272,2.213 7.627,2.4C7.845,1.845 8.385,1.455 9.015,1.455C9.645,1.455 10.185,1.845 10.402,2.4Z"
       android:strokeLineJoin="round"
       android:fillColor="#00000000"
-      android:strokeColor="#111827"
+      android:strokeColor="@color/_111827"
       android:strokeLineCap="round"/>
   <path
       android:strokeWidth="1"
       android:pathData="M11.265,14.295C11.265,15.532 10.253,16.545 9.015,16.545C8.4,16.545 7.83,16.29 7.425,15.885C7.02,15.48 6.765,14.91 6.765,14.295"
       android:fillColor="#00000000"
-      android:strokeColor="#111827"/>
+      android:strokeColor="@color/_111827"/>
 </vector>
