--- a/app/src/main/res/layout/contact_item_search.xml
+++ b/app/src/main/res/layout/contact_item_search.xml
@@ -5,14 +5,14 @@
     android:id="@+id/lnNumberItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:background="@color/f5f5f5_keypad"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/_8sdp"
+        android:layout_marginVertical="@dimen/_11sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:orientation="horizontal">
@@ -26,7 +26,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/bg_color"
-            app:cardBackgroundColor="@color/e6e6e6"
+            app:cardBackgroundColor="#D1E4F6"
             app:cardCornerRadius="@dimen/_30sdp"
             app:cardElevation="0dp">
 
@@ -44,7 +44,7 @@
                     android:gravity="center"
                     android:text="A"
                     android:textAllCaps="true"
-                    android:textColor="@color/black_og"
+                    android:textColor="@color/bg_color"
                     android:textSize="@dimen/_14ssp" />
 
                 <ImageView
@@ -76,7 +76,7 @@
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
                 android:text="@string/app_name"
                 android:textColor="@color/black"
@@ -88,16 +88,25 @@
                 android:layout_marginTop="@dimen/_4sdp"
                 android:orientation="horizontal">
 
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_regular"
+                    android:includeFontPadding="false"
+                    android:text="@string/mobile"
+                    android:textColor="@color/intro_sub_text_color"
+                    android:visibility="gone"
+                    android:textSize="@dimen/_11ssp" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_2sdp"
                     android:fontFamily="@font/poppins_regular"
                     android:includeFontPadding="false"
                     android:text="9876543210"
-                    android:textColor="@color/intro_sub_text_color"
+                    android:textColor="@color/intro_sub_text_color_keypad"
                     android:textSize="@dimen/_11ssp" />
 
             </LinearLayout>
